--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,5 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: /thenetly.com/
         port: 21
+        security: loose
+        protocol: ftps
